2003-06-26  Rodrigo Moya <rodrigo@ximian.com>

	* Evolution-Wombat.idl: removed WombatClient interface.

	* Makefile.am: don't link libwombat in.

2003-06-16  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* Makefile.am:
	Add missing skel/stub to BUILD_SOURCES (bug #44717).