@@ -1,3 +1,12 @@
+2003-08-13  JP Rosevear  <jpr@ximian.com>
+
+	* wombat.c (termination_handler): comment out some bits
+	(setup_pcs): register kind and method
+
+	* GNOME_Evolution_Wombat.server.in.in: add calendar protocol
+
+	* GNOME_Evolution_WombatLDAP.server.in.in: ditto
+
 2003-06-26  Rodrigo Moya <rodrigo@ximian.com>
 
 	* Evolution-Wombat.idl: removed WombatClient interface.
